--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.0",
     "ejs": "^2.5.6",
     "express": "^4.15.1",
+    "express-sanitizer": "^1.0.2",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.6"
   }
